kubernetes-manifests/infra/elasticsearch/elasticsearch.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: infra
spec:
  selector:
    matchLabels:
      name: elasticsearch
  template:
    metadata:
      labels:
        name: elasticsearch
    spec:
      containers:
        - image: elasticsearch:7.17.3
          name: elasticsearch
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9200
              protocol: TCP
          resources:
            limits:
              cpu: 2000m
              memory: 6Gi
            requests:
              cpu: 500m
              memory: 1Gi
