kubernetes-manifests/infra/elasticsearch/elasticsearch.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-external
  namespace: infra
  annotations:
    external-dns.alpha.kubernetes.io/hostname: elasticsearch.lab.donat.im
spec:
  type: LoadBalancer
  ports:
    - port: 9200
      protocol: TCP
  selector:
    name: elasticsearch
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-internal
  namespace: infra
spec:
  ports:
    - port: 9200
      protocol: TCP
  selector:
    name: elasticsearch
