kubernetes-manifests/infra/elasticsearch/kibana.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: infra
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5601
      protocol: TCP
  selector:
    name: kibana
