kubernetes-manifests/infra/elasticsearch/kibana.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: infra
spec:
  ingressClassName: traefik
  rules:
    - host: kibana.lab.donat.im
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
